--- a/package.json
+++ b/package.json
@@ -57,5 +57,8 @@
     "stylelint": "^16.6.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-scss": "^6.3.0"
+  },
+  "dependencies": {
+    "swiper": "^11.1.4"
   }
 }
