--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-replace": "^1.1.4",
     "gulp-sass": "^5.1.0",
     "gulp-sharp-optimize-images": "^4.0.3",
+    "gulp-svg-sprite": "^2.0.3",
     "gulp-svgmin": "^4.1.0",
     "gulp-svgstore": "^9.0.0",
     "gulp-ttf2woff2": "^4.0.1",
